# sample-game-engine-project

./: .gdbinit  .gitmodules  CMakeLists.txt  README.md  build.sh  gdb.sh  run.sh
assets/: scene.json
assets/lights/: point.json
assets/materials/: earth.json  red_moon.json  sphere.json  star.json
assets/models/: sphere.fbx
assets/scripts/: earth.lua  main.lua  red_moon.lua  star.lua  stars.lua  sun.lua
assets/shaders/: Basic.frag  DiffSpecEmis.frag  DiffSpecEmisColor.frag  DiffSpecEmisColor.vert
libs/: CMakeLists.txt
libs/assimp-5.1.2/: Makefile  cmake_uninstall.cmake
libs/assimp-5.1.2/test/: cmake_install.cmake
libs/assimp-5.1.2/test/headercheck/: cmake_install.cmake
libs/assimp-5.1.2/tools/assimp_cmd/: cmake_install.cmake
res/: earth.mat  red_moon.lua  red_moon.mat  scene.json  star.mat  stars.lua  sun.mat  sun_directional.mat  sun_point.mat
res/shaders/: LightSource.frag  LightSource.vert  Sample.frag  Sample.vert
scripts/: build.sh  gdb.sh  run.sh
shaders/: Sample.frag  Sample.vert
sogl/: CMakeLists.txt
sogl/libs/: CMakeLists.txt
sogl/libs/assimp-5.1.2/: CMakeCache.txt  assimp.pc  cmake_install.cmake  revision.h
sogl/libs/assimp-5.1.2/code/: Makefile  cmake_install.cmake
sogl/libs/assimp-5.1.2/test/: Makefile
sogl/libs/assimp-5.1.2/test/headercheck/: Makefile
sogl/libs/assimp-5.1.2/tools/assimp_cmd/: Makefile
sogl/src/: application.cpp  application.h  camera.cpp  camera.h  component.h  game_object.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  resource_loader.cpp  resource_loader.h  shader.cpp  shader.h  sogl.h  texture.cpp  texture.h  transform.cpp  transform.h  util.cpp  util.h
src/: application.cpp  application.h  camera.cpp  camera.h  includes.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  util.cpp  util.h
